examples/test/testpolicy2218.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2218
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key31: value34
      key17: value21
      key39: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value9
          key34: value9
      podSelector:
        matchLabels:
          key19: value27
          key42: value34
          key21: value43
